# sram-allocator

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  test.py  test_strategies.py
src/cpp/: bindings.cpp  linear_scan.cpp  linear_scan.h
src/python/sram_allocator/: __init__.py  allocator.py  builder.py  visualizer.py
