[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "sram_allocator"
version = "0.3.0"
description = "Strategy pattern SRAM memory allocator for neural network DAGs"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.version = ">=3.26"
ninja.version = ">=1.11"
ninja.make-fallback = false
wheel.install-dir = "sram_allocator"
wheel.packages = ["src/python/sram_allocator"]

# ccache 加速编译
cmake.args = ["-DCMAKE_CXX_COMPILER_LAUNCHER=ccache"]
